--- a/Journey/Journey/Resources/Storyboards/Home/Home.storyboard
+++ b/Journey/Journey/Resources/Storyboards/Home/Home.storyboard
@@ -8,6 +8,17 @@
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="BMHANNA_11yrs_otf.otf">
+            <string>BMHANNA11yrsoldOTF</string>
+        </array>
+        <array key="SpoqaHanSansNeo-Bold.otf">
+            <string>SpoqaHanSansNeo-Bold</string>
+        </array>
+        <array key="SpoqaHanSansNeo-Regular.otf">
+            <string>SpoqaHanSansNeo-Regular</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--Home View Controller-->
         <scene sceneID="s0d-6b-0kx">
@@ -20,23 +31,26 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QRv-uR-Wd3">
                                 <rect key="frame" x="0.0" y="44" width="414" height="689"/>
                                 <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="CYq-uQ-Oxb">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="689"/>
+                                    </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="253" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zcg-qq-1f1">
-                                        <rect key="frame" x="24" y="16.999999999999996" width="189" height="40.666666666666657"/>
+                                        <rect key="frame" x="24" y="16.999999999999996" width="170.66666666666666" height="37.666666666666657"/>
                                         <string key="text">Hi, 쟈기~ 오늘도 안녕하니? 
 끈적한 우리 관계를 위해</string>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <fontDescription key="fontDescription" name="SpoqaHanSansNeo-Regular" family="Spoqa Han Sans Neo" pointSize="15"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="690-zu-ul9">
-                                        <rect key="frame" x="24" y="77.666666666666671" width="118" height="51.000000000000014"/>
-                                        <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="32"/>
-                                        <state key="normal" title="코스 이름">
+                                        <rect key="frame" x="24" y="74.666666666666671" width="30" height="48"/>
+                                        <fontDescription key="fontDescription" name="BMHANNA11yrsoldOTF" family="BM HANNA 11yrs old OTF" pointSize="36"/>
+                                        <state key="normal">
                                             <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6j6-R8-Ky9">
-                                        <rect key="frame" x="24" y="138.66666666666666" width="88" height="32"/>
+                                        <rect key="frame" x="24" y="132.66666666666666" width="88" height="32"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="waterSampleImg" translatesAutoresizingMaskIntoConstraints="NO" id="jqj-dH-DmL">
                                                 <rect key="frame" x="9" y="6" width="20" height="20"/>
@@ -46,8 +60,8 @@
                                                 </constraints>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2 일차" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iWG-dc-0NX">
-                                                <rect key="frame" x="38" y="7.6666666666666856" width="36.666666666666657" height="17"/>
-                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                                                <rect key="frame" x="38" y="7.3333333333333446" width="37.333333333333343" height="17.666666666666671"/>
+                                                <fontDescription key="fontDescription" name="SpoqaHanSansNeo-Bold" family="Spoqa Han Sans Neo" pointSize="14"/>
                                                 <color key="textColor" name="White"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
@@ -65,12 +79,16 @@
                                 </subviews>
                                 <color key="backgroundColor" name="White"/>
                                 <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="CYq-uQ-Oxb" secondAttribute="bottom" id="08G-aG-GQ4"/>
                                     <constraint firstItem="zcg-qq-1f1" firstAttribute="top" secondItem="QRv-uR-Wd3" secondAttribute="top" constant="17" id="3TN-54-GyF"/>
+                                    <constraint firstItem="CYq-uQ-Oxb" firstAttribute="leading" secondItem="QRv-uR-Wd3" secondAttribute="leading" id="8dW-2r-g3g"/>
                                     <constraint firstItem="690-zu-ul9" firstAttribute="top" secondItem="zcg-qq-1f1" secondAttribute="bottom" constant="20" id="NXR-qt-HpD"/>
+                                    <constraint firstAttribute="trailing" secondItem="CYq-uQ-Oxb" secondAttribute="trailing" id="T8r-U2-OEY"/>
                                     <constraint firstItem="6j6-R8-Ky9" firstAttribute="top" secondItem="690-zu-ul9" secondAttribute="bottom" constant="10" id="WRp-ts-p1g"/>
                                     <constraint firstItem="6j6-R8-Ky9" firstAttribute="leading" secondItem="QRv-uR-Wd3" secondAttribute="leading" constant="24" id="dhX-5B-k3x"/>
                                     <constraint firstItem="zcg-qq-1f1" firstAttribute="leading" secondItem="QRv-uR-Wd3" secondAttribute="leading" constant="24" id="ijE-5Y-OqA"/>
                                     <constraint firstItem="690-zu-ul9" firstAttribute="leading" secondItem="zcg-qq-1f1" secondAttribute="leading" id="kY6-z2-TdX"/>
+                                    <constraint firstItem="CYq-uQ-Oxb" firstAttribute="top" secondItem="QRv-uR-Wd3" secondAttribute="top" id="rfB-58-PEc"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SyF-RU-IsE">
@@ -96,7 +114,7 @@
                                         <color key="textColor" name="hotPink"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7pt-9w-MQF">
+                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7pt-9w-MQF">
                                         <rect key="frame" x="370" y="15" width="20" height="20"/>
                                         <color key="backgroundColor" red="0.90588235294117647" green="0.90588235294117647" blue="0.90588235294117647" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
@@ -172,6 +190,7 @@
                         <outlet property="densityPercentLabel" destination="JN4-05-lI8" id="an7-tV-qdM"/>
                         <outlet property="densityProgressView" destination="RDF-PX-kcc" id="IZ0-SZ-VcS"/>
                         <outlet property="firstIndicatiorLeadingConstraint" destination="ic8-0r-ViE" id="lbk-Yn-fp2"/>
+                        <outlet property="journeyImageView" destination="CYq-uQ-Oxb" id="fy2-JU-ieh"/>
                         <outlet property="percentDescriptionButton" destination="7pt-9w-MQF" id="POP-d2-lnD"/>
                         <outlet property="subTitleLabel" destination="zcg-qq-1f1" id="tju-E5-PoT"/>
                         <outlet property="thirdIndicatorLeadingConstraint" destination="ja2-1f-iwZ" id="Yeg-vJ-rie"/>
