--- a/Journey/Journey/Sources/Views/DatePickerViewController.xib
+++ b/Journey/Journey/Sources/Views/DatePickerViewController.xib
@@ -76,7 +76,7 @@
                 </stackView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sCu-ic-i1Z">
                     <rect key="frame" x="47" y="205" width="280" height="44"/>
-                    <color key="backgroundColor" name="Pink"/>
+                    <color key="backgroundColor" name="Pink2"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="44" id="z1H-DE-Wr4"/>
                     </constraints>
@@ -109,8 +109,8 @@
     </objects>
     <resources>
         <image name="xmark" catalog="system" width="128" height="113"/>
-        <namedColor name="Pink">
-            <color red="0.95300000905990601" green="0.48600000143051147" blue="0.62400001287460327" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <namedColor name="Pink2">
+            <color red="1" green="0.52899998426437378" blue="0.6470000147819519" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="White">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
