--- a/Journey/Journey/Resources/Storyboards/Tabbar.storyboard
+++ b/Journey/Journey/Resources/Storyboards/Tabbar.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -14,6 +15,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="tintColor" name="Pink2"/>
+                        <color key="selectedImageTintColor" name="Pink2"/>
                     </tabBar>
                     <connections>
                         <segue destination="gfI-Hd-mIH" kind="relationship" relationship="viewControllers" id="dSz-nP-RyZ"/>
@@ -56,4 +59,9 @@
             <point key="canvasLocation" x="-178" y="82"/>
         </scene>
     </scenes>
+    <resources>
+        <namedColor name="Pink2">
+            <color red="1" green="0.52899998426437378" blue="0.6470000147819519" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
