--- a/Journey/Journey/Resources/Storyboards/Challenge/EmptyChallenge.storyboard
+++ b/Journey/Journey/Resources/Storyboards/Challenge/EmptyChallenge.storyboard
@@ -22,16 +22,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="34" translatesAutoresizingMaskIntoConstraints="NO" id="Zdw-Ta-MLd">
-                                <rect key="frame" x="73" y="222.33333333333334" width="229" height="421.33333333333326"/>
+                                <rect key="frame" x="73" y="223.66666666666663" width="229" height="419"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bgcrsselect" translatesAutoresizingMaskIntoConstraints="NO" id="wTH-vi-G9N">
                                         <rect key="frame" x="0.0" y="0.0" width="229" height="264"/>
                                     </imageView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="45" translatesAutoresizingMaskIntoConstraints="NO" id="3Wv-x8-maU">
-                                        <rect key="frame" x="0.0" y="298" width="229" height="123.33333333333331"/>
+                                        <rect key="frame" x="0.0" y="298" width="229" height="121"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PsZ-p4-NKQ">
-                                                <rect key="frame" x="0.0" y="0.0" width="229" height="30.333333333333332"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="229" height="28"/>
                                                 <string key="text">나와의 농도를 진하게 만들고 싶다고?
 챌린지를 성공하면 끈적해질 수 있어</string>
                                                 <fontDescription key="fontDescription" name="SpoqaHanSansNeo-Regular" family="Spoqa Han Sans Neo" pointSize="12"/>
@@ -39,7 +39,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZDq-BK-8ge">
-                                                <rect key="frame" x="0.0" y="75.333333333333258" width="229" height="48"/>
+                                                <rect key="frame" x="0.0" y="73" width="229" height="48"/>
                                                 <color key="backgroundColor" name="Black2"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="48" id="UEd-af-rDl"/>
