[#152] 소확행 작성 버튼 분기 팝업
### Description
- 0, 1, 2, 3에 따라 버튼 팝업 분기

### Related Issue
Resolve #152

--- a/Journey/Journey/Sources/Views/FeedHeaderView.xib
+++ b/Journey/Journey/Sources/Views/FeedHeaderView.xib
@@ -46,8 +46,8 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KmY-jr-Igp">
                             <rect key="frame" x="24" y="167" width="130" height="34"/>
                             <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="소확행 작성하기" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="njn-dt-tJi">
-                                    <rect key="frame" x="41" y="10" width="76" height="14"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="njn-dt-tJi">
+                                    <rect key="frame" x="117" y="17" width="0.0" height="0.0"/>
                                     <fontDescription key="fontDescription" name="SpoqaHanSansNeo-Bold" family="Spoqa Han Sans Neo" pointSize="12"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
